src/main/metadata/objects/CountryTranslation__mdt.object
<CustomObject>
    <fields>
        <fullName>Country_Translation__c</fullName>
        <label>Country Translation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>CountryTranslation</label>
    <pluralLabel>CountryTranslations</pluralLabel>
</CustomObject>